<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:id="@+id/week_day_settings">

    <CheckBox
        android:id="@+id/ch_mnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnd"/>
    <CheckBox
        android:id="@+id/ch_tud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tud"/>
    <CheckBox
        android:id="@+id/ch_wnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wnd"/>
    <CheckBox
        android:id="@+id/ch_thd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thd"/>
    <CheckBox
        android:id="@+id/ch_frd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frd"/>
    <CheckBox
        android:id="@+id/ch_std"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/std"/>
    <CheckBox
        android:id="@+id/ch_snd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snd"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_loop"
            android:textSize="22sp"/>

        <Spinner
            android:id="@+id/week_loop"
            android:layout_width="75dp"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_loop_cont"
            android:textSize="22sp"/>

    </LinearLayout>

</LinearLayout>