<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card:cardElevation="4dp"
    card:cardBackgroundColor="#dcdcdc">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/jan"
                android:text="@string/jan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/fb"
                android:text="@string/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/mch"
                android:text="@string/mch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/apr"
                android:text="@string/apr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/may"
                android:text="@string/may"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/jn"
                android:text="@string/jn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/jl"
                android:text="@string/jl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/ag"
                android:text="@string/ag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/sp"
                android:text="@string/sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/oct"
                android:text="@string/oct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/nov"
                android:text="@string/nov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/dec"
                android:text="@string/dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>